@@ -2,7 +2,7 @@ Monte Ohrt <monte@ispi.net>:
     Concepted compiling templates into PHP scripts, wrote initial "proof of
     concept" implementation, and maintains documentation & code base.
     
-Andrei Zmievski <andrei@ispi.net>:
+Andrei Zmievski <andrei@php.net>:
     Rewrote parser from scratch and maintains code base.
 
 Anne Holz <anne@ispi.net>:
@@ -14,9 +14,9 @@ Frank Kromann <fmk@php.net>:
 A special thanks goes to the people that have contributed other templating
 solutions to the PHP community which we learned a lot from.
 
-A special thanks goes to the members of the php-template mailing list and
-the smarty mailing list, whom sharing and bringing many ideas to the table and
-contributing source code, too numerous to list.
+A special thanks goes to the members of the php-template mailing list and the
+smarty mailing list, too numerous to list, who are sharing and bringing many
+ideas to the table and contributing source code.
 
 Rasmus Lerdorf <rasmus@php.net>: For starting what eventually became
 the coolest programming language ever.
